GNOME Bugzilla – Bug 796693
v4l2videoenc: capture STREAMON before output init fails on exynos MFC
Last modified: 2018-06-27 21:16:46 UTC
Created attachment 372849 [details] [review] patch to activate capture pool after output pool Exynos MFC driver fails on output STREAMON if capture is already streaming. Attached is a patch that delays capture initialization until after output initialization.
Commited as 58e9341384faa01073c8b3c1899f0f50defc124d